@@ -10,6 +10,7 @@ t/04_capture.t
 t/05_multi_capture.t
 t/06_fail.t
 t/07_taint.t
+t/critic.t
 t/exiter.pl
 t/internal.t
 t/kwalitee.t
